force-app/main/default/objects/smagicinteract__complianceAnalytics__c/smagicinteract__complianceAnalytics__c.object-meta.xml
<CustomObject>
    <label>complianceAnalytics</label>
    <nameField>
        <label>complianceAnalytics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>complianceAnalytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>