force-app/main/default/objects/smagicinteract__complianceAnalytics__c/fields/smagicinteract__Agent_Conversations__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Agent_Conversations__c</fullName>
    <description>Conversation Related Information of Agent Productivity</description>
    <label>Agent Conversations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>