force-app/main/default/objects/smagicinteract__complianceAnalytics__c/fields/smagicinteract__Agent_Productivity__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Agent_Productivity__c</fullName>
    <description>Used to Store Agent Productivity dashboard values generated from batch.</description>
    <label>Agent Productivity</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>