force-app/main/default/objects/smagicinteract__complianceAnalytics__c/fields/smagicinteract__Agent_Productivity_Incoming__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Agent_Productivity_Incoming__c</fullName>
    <label>Agent Productivity Incoming</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>