force-app/main/default/objects/smagicinteract__complianceAnalytics__c/fields/smagicinteract__Consent_Violation__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Consent_Violation__c</fullName>
    <label>Consent Violation</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>