force-app/main/default/objects/smagicinteract__complianceAnalytics__c/fields/smagicinteract__Days__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Days__c</fullName>
    <label>Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>