force-app/main/default/objects/smagicinteract__complianceAnalytics__c/fields/smagicinteract__Opt_Out_Analysis__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Opt_Out_Analysis__c</fullName>
    <label>Opt Out Analysis</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>